--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
     color: #000;
 }
 
+/*Images Styling*/
 .logo {
     position: absolute;
     top: 10px;
@@ -149,6 +150,25 @@ h2 {
     width: 100%;
     background-color: #2c6fbb;
 }
+.Submit-Button {
+    border-radius: 20px;
+    background-color: #143f71;
+    color: white;
+    border: none;
+    align-items: center;
+    padding: 10px;
+    margin: 5px;
+    text-align: center; 
+}
+.Submit-Button:hover{
+    background-color: rgb(99, 160, 195);
+    cursor: pointer;
+    text-decoration: none;
+    transition: all 0.3s;
+    font-size: 102%;
+    font-weight: bold;
+}
+
 #api {
     color: white;
     font-family: tahoma;
