--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,12 @@
     left: 90px;
 }
 
+#waves {
+    position:absolute;
+    top: 250px;
+    z-index:0;
+}
+
 /*Images Styling*/
 .logo {
     position: absolute;
@@ -53,6 +59,7 @@
     left: 80px;
     width: 150px;
     height: auto;
+    z-index:1;
 }
 
 .shell {
@@ -61,6 +68,23 @@
     right: 80px;
     width: 150px;
     height: auto;
+    z-index:1;
+}
+
+#seaweed {
+    position: absolute;
+    top: 100px;
+    width: 250px;
+    height: auto;
+    z-index:2;
+}
+#seaweed2 {
+    position: absolute;
+    bottom: 110px;
+    right: 0px;
+    width: 250px;
+    height: auto;
+    z-index:2;
 }
 /*Navigation Bar Styling*/
 
@@ -115,6 +139,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index:1;
 }
 .container .box { /*Basic Quiz and Detailed Quit Boxes*/
     background-color: white;
@@ -127,6 +152,7 @@ h2 {
     margin: 10px;
     text-align: center;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); 
+    z-index:1;
 }
 
 .container .box h2 {
@@ -167,7 +193,10 @@ h2 {
     padding: 10px;
     width: 100%;
     background-color: #2c6fbb;
+    z-index:1;
+
 }
+
 .Submit-Button {
     border-radius: 20px;
     background-color: #143f71;
@@ -197,9 +226,10 @@ h2 {
     border-radius: 20px; /* Adjust the value to change button roundness */
     border: none;
     padding: 10px 20px;
-    color: rgb(0, 0, 0);
+    color: rgb(26, 68, 103);
     font-weight: bold;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .rounded-button:hover {
@@ -209,6 +239,8 @@ h2 {
     transition: all 0.3s;
     font-size: 110%;
     font-weight: bold;
+    text-decoration: none;
+
 }
 
 .blue-gradient {
@@ -220,6 +252,7 @@ h2 {
 #progressBar {
     width: 100%;
     background-color: gray;
+    z-index:1;
 }
 #myBar { 
     width: 10%;
@@ -236,10 +269,12 @@ h2 {
     max-width: 600px;       /* Max width to center the form */
     margin: auto; 
     background-color: white;
+    position:relative;
     border-radius:20px;
     font-family:tahoma;
     text-align:center;
     color: #2c6fbb;
+    z-index:1;
   }
 
   .questions {
@@ -258,6 +293,7 @@ h2 {
     display: flex;
     gap: 30px;
     align-items: center;
+    z-index:1;
   }
   .radio-button {
     display: flex;
