--- a/src/App.css
+++ b/src/App.css
@@ -405,3 +405,20 @@ h2 {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; /* Specify the font family */
   }
   
+  .spinner {
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+    position: absolute;
+    bottom: 100px;
+    left: 50%;
+  }
+
+  @keyframes spin {
+    from {
+        transform: scale(0.25) rotate(0deg);
+    }
+    to {
+        transform: scale(0.25) rotate(-360deg);
+    }
+  }
